# MythMaker

./: .gitignore  README.md  START_MythMaker_WINDOWS.bat  pyproject.toml
docs/: RELEASE_CHECKLIST.md  TESTER_FEEDBACK.md  TESTER_SCRIPT.md
docs/demo-scenes/: 01-bottom-house-seed-101.txt  02-therapy-under-the-stairs-seed-202.txt  03-five-a-side-seed-303.txt  04-cult-drift-seed-404.txt  05-collision-seed-505.txt  06-bottom-house-seed-606.txt  07-therapy-under-the-stairs-seed-707.txt  08-five-a-side-seed-808.txt  09-cult-drift-seed-909.txt  10-collision-seed-1001.txt  README.md
mythmaker_app/: __init__.py  app.py  engine.py  storage.py
mythmaker_app/seeds/: bottom_house.json
mythmaker_app/static/: app.css  app.js
mythmaker_app/templates/: index.html
scripts/: make_release_zip.ps1  sample_scenes.py  verify_release_zip.ps1
tests/: test_app_smoke.py  test_engine.py  test_release_scripts.py  test_storage.py
