[project]
name = "mythmaker"
version = "0.1.1"
description = "Local-first absurd myth and sitcom scene generator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MythMaker" }]
dependencies = []

[project.scripts]
mythmaker = "mythmaker_app.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
